--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_APP_URL=https://
+# NEXT_PUBLIC_APP_URL=https://
 
-SANITY_PROJECT_ID='2131zv3qw'
-SANITY_DATASET='production' 
-SANITY_API_VERSION='2022-03-07'
+# SANITY_PROJECT_ID='uvmqkml6'
+# SANITY_DATASET='production' 
+# SANITY_API_VERSION='2022-03-07'
