--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@radix-ui/react-slot": "1.1.1",
     "@react-three/drei": "9.121.3",
     "@react-three/fiber": "9.0.0-rc.5",
+    "@sanity/icons": "^3.7.0",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.81.0",
     "@vercel/analytics": "1.4.1",
     "@vercel/speed-insights": "1.1.0",
     "class-variance-authority": "0.7.1",
@@ -25,14 +28,16 @@
     "date-fns": "4.1.0",
     "framer-motion": "12.0.3",
     "lucide-react": "0.474.0",
-    "next-sanity": "9.8.42",
-    "next-themes": "0.4.4",
     "next": "15.1.6",
-    "react-dom": "19.0.0",
+    "next-sanity": "^9.9.6",
+    "next-themes": "0.4.4",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "rehype-autolink-headings": "7.1.0",
     "rehype-slug": "6.0.0",
     "remark-toc": "9.0.0",
+    "sanity": "^3.81.0",
+    "styled-components": "^6.1.16",
     "tailwind-merge": "2.6.0",
     "three": "0.172.0"
   },
