--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "unlighthouse": "pnpx unlighthouse --site https://jorgeassaf.vercel.app --desktop --no-cache"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@radix-ui/react-aspect-ratio": "1.1.1",
     "@radix-ui/react-dialog": "1.1.5",
     "@radix-ui/react-slot": "1.1.1",
     "@react-three/drei": "9.121.3",
-    "@react-three/fiber": "9.0.0-rc.5",
+    "@react-three/fiber": "^9.0.0-rc.5",
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.81.0",
@@ -27,12 +28,15 @@
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
     "framer-motion": "12.0.3",
+    "gsap": "^3.12.7",
+    "leva": "^0.10.0",
     "lucide-react": "0.474.0",
     "next": "15.1.6",
     "next-sanity": "^9.9.6",
     "next-themes": "0.4.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-responsive": "^10.0.1",
     "rehype-autolink-headings": "7.1.0",
     "rehype-slug": "6.0.0",
     "remark-toc": "9.0.0",
