--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@headlessui/react": "^2.2.1",
     "@radix-ui/react-aspect-ratio": "1.1.1",
     "@radix-ui/react-dialog": "1.1.5",
     "@radix-ui/react-slot": "1.1.1",
@@ -27,7 +28,7 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
-    "framer-motion": "12.0.3",
+    "framer-motion": "^12.0.3",
     "gsap": "^3.12.7",
     "leva": "^0.10.0",
     "lucide-react": "0.474.0",
