--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "ts:check": "tsc --noEmit",
     "format": "prettier --write .",
     "clean": "rm -rf .next && rm -rf node_modules .content-collections .unlighthouse",
-    "unlighthouse": "pnpx unlighthouse --site https://jorgeassaf.vercel.app --desktop --no-cache"
+    "unlighthouse": "pnpx unlighthouse --site https://murugan.vercel.app --desktop --no-cache"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
@@ -18,8 +18,8 @@
     "@radix-ui/react-aspect-ratio": "1.1.1",
     "@radix-ui/react-dialog": "1.1.5",
     "@radix-ui/react-slot": "1.1.1",
-    "@react-three/drei": "9.121.3",
-    "@react-three/fiber": "^9.0.0-rc.5",
+    "@react-three/drei": "^9.121.3",
+    "@react-three/fiber": "^9.1.2",
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.81.0",
@@ -44,7 +44,8 @@
     "sanity": "^3.81.0",
     "styled-components": "^6.1.16",
     "tailwind-merge": "2.6.0",
-    "three": "0.172.0"
+    "three": "^0.172.0",
+    "three-stdlib": "^2.35.15"
   },
   "devDependencies": {
     "@content-collections/core": "0.8.0",
