--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "ts:check": "tsc --noEmit",
     "format": "prettier --write .",
     "clean": "rm -rf .next && rm -rf node_modules .content-collections .unlighthouse",
-    "unlighthouse": "pnpx unlighthouse --site https://murugan.vercel.app --desktop --no-cache"
+    "unlighthouse": "pnpx unlighthouse --site https://murugan-portfolio.vercel.app --desktop --no-cache"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
@@ -32,6 +32,7 @@
     "gsap": "^3.12.7",
     "leva": "^0.10.0",
     "lucide-react": "0.474.0",
+    "maath": "^0.10.8",
     "next": "15.1.6",
     "next-sanity": "^9.9.6",
     "next-themes": "0.4.4",
