--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "ts:check": "tsc --noEmit",
     "format": "prettier --write .",
     "clean": "rm -rf .next && rm -rf node_modules .content-collections .unlighthouse",
-    "unlighthouse": "pnpx unlighthouse --site https://murugan-portfolio.vercel.app --desktop --no-cache"
+    "unlighthouse": "npx unlighthouse --site https://murugan-portfolio.vercel.app --desktop --no-cache"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
@@ -28,7 +28,7 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
-    "framer-motion": "^12.0.3",
+    "framer-motion": "^12.7.4",
     "gsap": "^3.12.7",
     "leva": "^0.10.0",
     "lucide-react": "0.474.0",
@@ -74,6 +74,6 @@
     "standard": "17.1.2",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "1.0.7",
-    "typescript": "5.7.3"
+    "typescript": "^5.8.3"
   }
 }
