--- a/package.json
+++ b/package.json
@@ -10,43 +10,34 @@
     "ts:check": "tsc --noEmit",
     "format": "prettier --write .",
     "clean": "rm -rf .next && rm -rf node_modules .content-collections .unlighthouse",
-    "unlighthouse": "npx unlighthouse --site https://murugan-portfolio.vercel.app --desktop --no-cache"
+    "unlighthouse": "pnpx unlighthouse --site https://jorgeassaf.vercel.app --desktop --no-cache"
   },
   "dependencies": {
-    "@gsap/react": "^2.1.2",
-    "@headlessui/react": "^2.2.1",
     "@radix-ui/react-aspect-ratio": "1.1.1",
     "@radix-ui/react-dialog": "1.1.5",
     "@radix-ui/react-slot": "1.1.1",
-    "@react-three/drei": "^9.121.3",
-    "@react-three/fiber": "^9.1.2",
-    "@sanity/icons": "^3.7.0",
-    "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.81.0",
+    "@react-three/drei": "9.121.3",
+    "@react-three/fiber": "9.0.0-rc.5",
     "@vercel/analytics": "1.4.1",
     "@vercel/speed-insights": "1.1.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
-    "framer-motion": "^12.7.4",
-    "gsap": "^3.12.7",
+    "framer-motion": "11.0.17",
     "leva": "^0.10.0",
     "lucide-react": "0.474.0",
     "maath": "^0.10.8",
     "next": "15.1.6",
-    "next-sanity": "^9.9.6",
+    "next-sanity": "9.8.42",
     "next-themes": "0.4.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-responsive": "^10.0.1",
     "rehype-autolink-headings": "7.1.0",
     "rehype-slug": "6.0.0",
     "remark-toc": "9.0.0",
-    "sanity": "^3.81.0",
-    "styled-components": "^6.1.16",
     "tailwind-merge": "2.6.0",
-    "three": "^0.172.0",
-    "three-stdlib": "^2.35.15"
+    "three": "0.172.0"
   },
   "devDependencies": {
     "@content-collections/core": "0.8.0",
@@ -74,6 +65,6 @@
     "standard": "17.1.2",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "1.0.7",
-    "typescript": "^5.8.3"
+    "typescript": "5.7.3"
   }
 }
