--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "1.1.1",
     "@react-three/drei": "9.121.3",
     "@react-three/fiber": "9.0.0-rc.5",
+    "@sanity/vision": "^3.85.1",
     "@vercel/analytics": "1.4.1",
     "@vercel/speed-insights": "1.1.0",
     "class-variance-authority": "0.7.1",
