--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rehype-autolink-headings": "7.1.0",
     "rehype-slug": "6.0.0",
     "remark-toc": "9.0.0",
+    "sanity": "^3.85.1",
     "tailwind-merge": "2.6.0",
     "three": "0.172.0"
   },
