--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "unlighthouse": "pnpx unlighthouse --site https://murugan-portfolio.vercel.app --desktop --no-cache"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@radix-ui/react-aspect-ratio": "1.1.1",
     "@radix-ui/react-dialog": "1.1.5",
     "@radix-ui/react-slot": "1.1.1",
@@ -25,6 +26,7 @@
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
     "framer-motion": "11.0.17",
+    "gsap": "^3.12.7",
     "leva": "^0.10.0",
     "lucide-react": "0.474.0",
     "maath": "^0.10.8",
@@ -49,6 +51,7 @@
     "@ianvs/prettier-plugin-sort-imports": "4.4.1",
     "@shikijs/rehype": "2.1.0",
     "@types/eslint": "9.6.1",
+    "@types/gsap": "^3.0.0",
     "@types/node": "22.10.9",
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
