--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@radix-ui/react-slot": "1.1.1",
     "@react-three/drei": "9.121.3",
     "@react-three/fiber": "9.0.0-rc.5",
+    "@sanity/icons": "^3.7.0",
+    "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.85.1",
     "@vercel/analytics": "1.4.1",
     "@vercel/speed-insights": "1.1.0",
